--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
-    <head>
-        <header title="Forte Senha"></header>
-    </head>
-    <body>
-        <H1>Forte Senha</H1>
-        <p>{{ .PasswordValue }}</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Forte Senha</title>
+</head>
+<body>
+    <H1 class="text-3xl font-bold">Forte Senha</H1>
+    <p>{{ .PasswordValue }}</p>
+</body>
 </html>
