evento post para geracao

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <H1 class="text-3xl font-bold">Forte Senha</H1>
     <p>{{ .PasswordValue }}</p>
+
+    <form action="/" method="post">
+        <button type="submit">Gerar senha</button>
+    </form>
 </body>
 </html>
