--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>Forte Senha</title>
 </head>
+<style>
+    body {
+        background-color: #1D1E20;
+        color: #F3F3F3;
+        font-family: 'Roboto Mono', monospace;
+        display: flex;
+        justify-content: center;
+    }
+</style>
 <body>
-    <H1 class="text-3xl font-bold">Forte Senha</H1>
-    <p>{{ .PasswordValue }}</p>
-
-    <form action="/" method="post">
-        <button type="submit">Gerar senha</button>
-    </form>
+    <div class="center">
+        <h1>Forte Senha</h1>
+        <p>{{ .PasswordValue }}</p>
+    
+        <form action="/" method="post">
+            <button type="submit">Gerar senha</button>
+        </form>
+    </div>
 </body>
 </html>
