--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         background-color: #1D1E20;
         color: #F3F3F3;
         font-family: 'Roboto Mono', monospace;
+    }
+    h1, p, form {
         display: flex;
         justify-content: center;
     }
